--- a/src/components/Technician.css
+++ b/src/components/Technician.css
@@ -7,13 +7,19 @@
 
 .Technician .details {
   float: right;
-  margin: 0.5em 2em 0 0;
+  margin: 1em 2em 0 0;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1120px) {
+  .Technician .details {
+    margin: 1em 0;
+  }
+}
+
+@media (max-width: 1024px) {
   .Technician .details {
     float: none;
-    margin: 0;
-    width: 15em;
+    position: absolute;
+    margin: 1em 0 0 2em;
   }
 }
